# arb_temp_cpp

./: CMakeLists.txt  README.md  main.cpp
binance_f_module/: exchange.cpp  exchange.h  websocket_manager.cpp
binance_s_module/: exchange.cpp  exchange.h
exchange/: exchange.h
gateio_f_module/: exchange.cpp  exchange.h  websocket_manager.h
gateio_s_module/: api.cpp  api.h  exchange.cpp  exchange.h
strategy/: strategy.cpp  strategy.h
util/: util.h
